<resources>
    <string name="app_name">JPOS</string>
    <string name="launch_legal_statement">©2013-2016 聚一聚二版权所有</string>

    <string name="logo_share_name">logoShareName</string>

    <string name="ic_arrow_left">&#xe61a;</string>
    <string name="ic_arrow_right">&#xe61b;</string>

    <string name="ic_shop">&#xe60a;</string>
    <string name="ic_user">&#xe61c;</string>
    <string name="ic_psw">&#xe601;</string>
    <string name="ic_switch_account">&#xe61d;</string>
    <string name="ic_exit">&#xe61e;</string>
    <string name="ic_close">&#xe60b;</string>
    <string name="ic_stock">&#xe603;</string>
    <string name="ic_camera">&#xe620;</string>
    <string name="ic_barcode">&#xe605;</string>
    <string name="ic_smail">&#xe619;</string>
    <string name="ic_search">&#xe622;</string>
    <string name="ic_add">&#xe609;</string>
    <string name="ic_complete">&#xe621;</string>
    <string name="ic_storage">&#xe604;</string>
    <string name="ic_cash">&#xe608;</string>
    <string name="ic_report">&#xe610;</string>
    <string name="ic_stockcheck">&#xe603;</string>
    <string name="ic_label">&#xe617;</string>



</resources>
