<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.ui.LoginActivity">

    <data>

        <variable
            name="mUIViewModel"
            type="com.j1j2.jposmvvm.features.viewmodel.UIViewModel" />
    </data>

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_300px"
            android:layout_marginTop="@dimen/size_100px"
            android:scaleType="fitCenter"
            android:src="@drawable/login_logo"
            android:transitionName="@string/logo_share_name" />

        <com.zhy.autolayout.AutoLinearLayout
            style="@style/edit_login_layout_style"
            android:layout_marginTop="@dimen/size_80px">

            <TextView
                style="@style/edit_login_ic_style"
                android:text="@string/ic_shop" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/login_edit_store"
                style="@style/edit_login_style"
                android:hint="请输入账套名"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:emptyErrorString="账套名不能为空"
                app:testErrorString="请输入正确的账套名"
                app:testType="nocheck"
                app:viewState="@{mUIViewModel.uiState}" />
        </com.zhy.autolayout.AutoLinearLayout>

        <View style="@style/edit_login_bottom_line_style" />

        <com.zhy.autolayout.AutoLinearLayout
            style="@style/edit_login_layout_style"
            android:layout_marginTop="@dimen/size_40px">

            <TextView
                style="@style/edit_login_ic_style"
                android:text="@string/ic_user" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/login_edit_account"
                style="@style/edit_login_style"
                android:hint="请输入登录账号"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:emptyErrorString="登录账号不能为空"
                app:testErrorString="请输入正确的登录账号"
                app:testType="nocheck"
                app:viewState="@{mUIViewModel.uiState}" />
        </com.zhy.autolayout.AutoLinearLayout>

        <View style="@style/edit_login_bottom_line_style" />


        <com.zhy.autolayout.AutoLinearLayout
            style="@style/edit_login_layout_style"
            android:layout_marginTop="@dimen/size_40px">

            <TextView
                style="@style/edit_login_ic_style"
                android:text="@string/ic_psw" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/login_edit_password"
                style="@style/edit_login_style"
                android:hint="请输入账号密码"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                app:emptyErrorString="账号密码不能为空"
                app:testErrorString="请输入正确的账号密码"
                app:testType="nocheck"
                app:viewState="@{mUIViewModel.uiState}" />
        </com.zhy.autolayout.AutoLinearLayout>

        <View style="@style/edit_login_bottom_line_style" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/login_btn"
            android:layout_width="@dimen/size_480px"
            android:layout_height="@dimen/size_80px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_80px"
            android:onClick="login"
            android:text="登　录"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_32px"
            app:pb_colorComplete="@color/blue_normal"
            app:pb_colorNormal="@color/colorLoginBtn"
            app:pb_colorPressed="@color/colorPrimaryDark"
            app:pb_colorProgress="@color/purple_progress"
            app:pb_textComplete="登录成功"
            app:pb_textError="登录失败"
            app:pb_textProgress="登录中"
            app:uiViewModel="@{mUIViewModel}"
            app:viewState="@{mUIViewModel.uiState}" />

    </com.zhy.autolayout.AutoLinearLayout>
</layout>