<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/coloreeeeee"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/toolbar"
            style="@style/actionbar_layout_style"
            android:orientation="horizontal">

            <TextView
                style="@style/actionbar_icon_btn_style"
                fontPath="iconfont/iconfont.ttf"
                android:onClick="onBack"
                android:text="@string/ic_arrow_left" />

            <TextView
                style="@style/actionbar_title_style"
                android:text="库存管理" />

            <TextView
                android:id="@+id/actionbarNoPicBtn"
                style="@style/actionbar_text_btn_style"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="switchState"
                android:text="无图" />

            <TextView
                android:id="@+id/actionbarNewProductBtn"
                style="@style/actionbar_text_btn_style"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="createProduct"
                android:text="新增"
                android:visibility="gone" />

        </com.zhy.autolayout.AutoRelativeLayout>


        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_80px"
            android:layout_marginBottom="@dimen/size_10px"
            android:layout_marginEnd="@dimen/size_20px"
            android:layout_marginLeft="@dimen/size_20px"
            android:layout_marginRight="@dimen/size_20px"
            android:layout_marginStart="@dimen/size_20px"
            android:layout_marginTop="@dimen/size_10px"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <EditText
                android:id="@+id/editSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_80px"
                android:background="@drawable/edit_searchview_bg"
                android:gravity="center_vertical"
                android:hint="搜索"
                android:paddingEnd="@dimen/size_100px"
                android:paddingLeft="@dimen/size_100px"
                android:paddingRight="@dimen/size_100px"
                android:paddingStart="@dimen/size_100px"
                android:textColor="@color/color333333"
                android:textColorHint="@color/color999999"
                android:textSize="@dimen/text_28px" />

            <TextView
                fontPath="iconfont/iconfont.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/size_30px"
                android:paddingStart="@dimen/size_30px"
                android:text="@string/ic_search"
                android:textColor="@color/colord4d4d4"
                android:textSize="@dimen/text_48px" />

            <TextView
                fontPath="iconfont/iconfont.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="navigateToCaptureActivityForResult"
                android:paddingEnd="@dimen/size_30px"
                android:paddingRight="@dimen/size_30px"
                android:text="@string/ic_barcode"
                android:textColor="@color/color7b7b7b"
                android:textSize="@dimen/text_48px" />

        </com.zhy.autolayout.AutoRelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1px"
            android:background="@color/colord4d4d4" />

        <com.zhy.autolayout.AutoFrameLayout
            android:id="@+id/fragmentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.zhy.autolayout.AutoLinearLayout>
</layout>