<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLayoutBackground"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/toolbar"
            style="@style/actionbar_layout_style"
            android:orientation="horizontal">

            <TextView
                style="@style/actionbar_icon_btn_style"
                fontPath="iconfont/iconfont.ttf"
                android:onClick="onBack"
                android:text="@string/ic_arrow_left" />

            <TextView
                android:id="@+id/actionBarTitle"
                style="@style/actionbar_title_style"
                android:text="商品盘点" />

            <TextView
                style="@style/actionbar_text_btn_style"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:onClick="createStock"
                android:text="新增商品" />


        </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_80px"
            android:layout_marginBottom="@dimen/size_10px"
            android:layout_marginEnd="@dimen/size_20px"
            android:layout_marginLeft="@dimen/size_20px"
            android:layout_marginRight="@dimen/size_20px"
            android:layout_marginStart="@dimen/size_20px"
            android:layout_marginTop="@dimen/size_10px"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <EditText
                android:id="@+id/editSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_80px"
                android:background="@drawable/edit_searchview_bg"
                android:gravity="center_vertical"
                android:hint="搜索"
                android:paddingEnd="@dimen/size_100px"
                android:paddingLeft="@dimen/size_100px"
                android:paddingRight="@dimen/size_100px"
                android:paddingStart="@dimen/size_100px"
                android:textColor="@color/color333333"
                android:textColorHint="@color/color999999"
                android:textSize="@dimen/text_28px" />

            <TextView
                fontPath="iconfont/iconfont.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/size_30px"
                android:paddingStart="@dimen/size_30px"
                android:text="@string/ic_search"
                android:textColor="@color/colord4d4d4"
                android:textSize="@dimen/text_48px" />

            <TextView
                fontPath="iconfont/iconfont.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="navigateToCaptureActivityForResult"
                android:paddingEnd="@dimen/size_30px"
                android:paddingRight="@dimen/size_30px"
                android:text="@string/ic_barcode"
                android:textColor="@color/color7b7b7b"
                android:textSize="@dimen/text_48px" />

        </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLayoutBackground"
            android:orientation="vertical">


            <com.jude.easyrecyclerview.EasyRecyclerView
                android:id="@+id/productsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_empty="@layout/view_empty"
                app:layout_error="@layout/view_error"
                app:layout_progress="@layout/view_loading"
                app:recyclerClipToPadding="false" />

            <com.zhy.autolayout.AutoLinearLayout
                android:id="@+id/bottomLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                android:background="@drawable/item_top_divider_bg"
                android:orientation="vertical">

                <com.zhy.autolayout.AutoLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_80px"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/size_20px"
                        android:paddingRight="@dimen/size_20px"
                        android:text="数量差异："
                        android:textColor="@color/color333333"
                        android:textSize="@dimen/text_28px" />

                    <TextView
                        android:id="@+id/count"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="@color/color333333"
                        android:textSize="@dimen/text_28px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/size_20px"
                        android:paddingRight="@dimen/size_20px"
                        android:text="金额差异："
                        android:textColor="@color/color333333"
                        android:textSize="@dimen/text_28px" />

                    <TextView
                        android:id="@+id/amount"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textColor="@color/color333333"
                        android:textSize="@dimen/text_28px" />

                </com.zhy.autolayout.AutoLinearLayout>


            </com.zhy.autolayout.AutoLinearLayout>

        </com.zhy.autolayout.AutoRelativeLayout>

    </com.zhy.autolayout.AutoLinearLayout>
</layout>